                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2017-08-24
 * Everyone should be using the latest version of DBIx::Class::InflateColumn::Serializer to avoid JSON encoding errors. You also need to add the following to any fields you serialize to JSON:

  'serializer_options' => { utf8 => 1 }

 Example:

  fields => {
        dbic            => { data_type => 'mediumblob', is_nullable => 1, 'serializer_class' => 'JSON', 'serializer_options' => { utf8 => 1 } },
        view            => 'private',
        edit            => 'postable',
    },

2017-08-09
 * Added accumulate option to wing.angular.js objectListManager search().

2017-08-04
 * Added role for attaching comments to an object.

2017-07-20
 * Moved login() from Wing::Web::Account, to Wing::Dancer and made it a Dancer Plugin so it can be called from multiple modules.

2017-07-18
 * Added instructions for compiling OpenSSL and Perl modules on Mac OS, because Apple's outdated OpenSSL doesn't work anymore with sites like Stripe.

2017-06-29
 Added skip_confirm to wing.angular.js objectManager delete().

2017-06-29
 * Added get_object() in wing.angular.js to suppliment find_object().
 * Added params option to search() and all() in objectListManager in wing.angular.js.

2017-06-25
 * Allow null as a value on a Rest qualifier.
 * Fixed a bug in wing.merge()
 * Added with_credentials flag to wing.angular.js objectListManager and objectManager $http methods.

2017-06-23
 * create() in wing.angular.js objectListManager now provides a reference to the object during on_success

2017-06-22
 * wing.angular.js now supports angular 1.6, by removing the use of .success and .error methods on $http in favor of .then

2017-06-09
 * WebFilteredField no longer puts a restriction on the length of a string.